--- a/blocks/video/__iframes/video__iframes.css
+++ b/blocks/video/__iframes/video__iframes.css
@@ -1,7 +1,9 @@
 .video__iframes {
   margin: 0 auto;
+  padding: 0;
   display: flex;
   width: 1140px;
+  justify-content: center;
   gap: 20px;
   list-style-type: none;
   position: relative;
