--- a/blocks/cards/__title/cards__title.css
+++ b/blocks/cards/__title/cards__title.css
@@ -2,7 +2,6 @@
   text-align: center;
   line-height: 1.15;
   font-size: 24px;
-  font-weight: bold;
-  margin: 0, auto;
-  margin-top: 43px;
+  font-weight: 600;
+  margin: 43px auto 0;
 }
