--- a/blocks/cards/__description/cards__description.css
+++ b/blocks/cards/__description/cards__description.css
@@ -1,6 +1,5 @@
 .cards__description {
-  margin: 0, auto;
-  margin-top: 16px;
+  margin: 16px auto 0;
   line-height: 23px;
   font-size: 18px;
   font-weight: normal;
