--- a/blocks/feynman/feynman.css
+++ b/blocks/feynman/feynman.css
@@ -1,6 +1,7 @@
 .feynman {
+  box-sizing: border-box;
   padding-top: 100px;
-  height: 890px;
+  min-height: 890px;
   background-color: #f2f2f2;
   background-image: url(../../images/feinman.png);
   background-repeat: no-repeat;
