--- a/blocks/khan/__book-pic/khan__book-pic.css
+++ b/blocks/khan/__book-pic/khan__book-pic.css
@@ -2,4 +2,6 @@
   height: 620px;
   width: 608px;
   overflow: hidden;
+  background-image: url("../../../images/khan-book.jpg");
+  background-repeat: no-repeat;
 }
