--- a/blocks/khan/__quote/khan__quote.css
+++ b/blocks/khan/__quote/khan__quote.css
@@ -1,6 +1,6 @@
 .khan__quote {
-  margin: 0;
-  margin-top: 50px;
+  margin: 50px 0 0;
+  max-width: 790px;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
