--- a/blocks/section-title/section-title.css
+++ b/blocks/section-title/section-title.css
@@ -1,9 +1,8 @@
 .section-title {
   margin: 0 auto;
-  margin-top: 100;
   width: 60%;
   line-height: 1.15;
   font-size: 60px;
-  font-weight: bold;
+  font-weight: 600;
   text-align: center;
 }
