--- a/blocks/two-columns/__span-acent/two-columns__span-acent.css
+++ b/blocks/two-columns/__span-acent/two-columns__span-acent.css
@@ -1,6 +1,6 @@
 .two-columns__span-acent {
   margin-right: 10px;
   line-height: 34px;
-  font-weight: bold;
+  font-weight: 600;
   display: flex;
 }
