--- a/blocks/feynman/__link/feynman__link.css
+++ b/blocks/feynman/__link/feynman__link.css
@@ -7,8 +7,9 @@
   font-weight: normal;
   text-decoration: none;
   color: #2f80ed;
+  transition: opacity 0.2s ease-in-out;
 }
 
 .feynman__link:hover {
-  text-decoration: underline;
+  opacity: .5;
 }
