--- a/blocks/footer/__column-link/footer__column-link.css
+++ b/blocks/footer/__column-link/footer__column-link.css
@@ -6,8 +6,9 @@
   padding-bottom: 10px;
   display: block;
   text-decoration: none;
+  transition: opacity 0.2s ease-in-out;
 }
 
 .footer__column-link:hover {
-  color: rgb(75, 73, 73);
+  opacity: .2;
 }
