--- a/blocks/header/__link/header__link.css
+++ b/blocks/header/__link/header__link.css
@@ -1,8 +1,9 @@
 .header__link {
   text-decoration: none;
   color: #2f80ed;
+  transition: opacity 0.2s ease-in-out;
 }
 
 .header__link:hover {
-  text-decoration: underline;
+  opacity: .5;
 }
