--- a/blocks/khan/__buy-link/khan__buy-link.css
+++ b/blocks/khan/__buy-link/khan__buy-link.css
@@ -6,8 +6,9 @@
   color: #2f80ed;
   text-decoration: none;
   align-self: flex-start;
+  transition: opacity 0.2s ease-in-out;
 }
 
 .khan__buy-link:hover {
-  text-decoration: underline;
+  opacity: .5;
 }
